[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/actors/enemy/enemy_kotengu_jump_unlocking.gd" type="Script" id=1]
[ext_resource path="res://assets/models3d/kotengu/enemy_kotengu.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/models3d/bubbles/player_bubble.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=10]
radius = 1.14993
height = 0.559221

[node name="EnemyKotengu_UnlockJump" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 2
collision_mask = 12
axis_lock_motion_z = true
move_lock_z = true
script = ExtResource( 1 )

[node name="player_bubble" parent="." instance=ExtResource( 3 )]
visible = false

[node name="BubblePlayer_1" parent="player_bubble" index="0"]
transform = Transform( 0.995873, 0, -0.0907577, 0, 1, 0, 0.0907577, 0, 0.995873, 0, 0, 0 )

[node name="EnemyKotengu" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -0.855584, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.0221462, 0.25712, -0.00692463 )
shape = SubResource( 10 )

[node name="Detector" type="Spatial" parent="."]

[node name="Front" type="RayCast" parent="Detector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.558928, 0.20559, 0 )
enabled = true
cast_to = Vector3( 1, 0, 0 )
collision_mask = 4

[node name="CaptureTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0706701, 0 )
aabb = AABB( -1, -1, -0.683101, 2, 2, 1.3662 )

[connection signal="timeout" from="CaptureTimer" to="." method="_on_CaptureTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_screen_exited"]

[editable path="player_bubble"]
[editable path="EnemyKotengu"]
